@@ -1,3 +1,7 @@
+2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b215
+
+	* Change: Tweaked the multiple comment deletion with using array_reverse()
+
 2004-10-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b214
 
 	* Fix: Added doctype to view_comments and make it valid HTML 4.01
